added support to build sample app with or without ProGuard obfuscation